fix: 修复collapse箭头位置不居中的问题

--- a/packages/ui/collapse/src/index.less
+++ b/packages/ui/collapse/src/index.less
@@ -1,6 +1,10 @@
 @osui-collapse-class-prefix: osui-collapse;
 
 .@{osui-collapse-class-prefix} {
+    &.ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-arrow {
+        top: var(--collapse-arrow-top);
+    }
+
     .@{ant-prefix}-collapse-item {
         .@{ant-prefix}-collapse-header {
             color: var(--theme-text-color);
